--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,45 +1,81 @@
 @media (max-width: 800px) {
+    * {
+        line-height: 18px;
+    }
+
     nav {
         display: flex;
         width: 100%;
         height: 80px;
-        border: 1px solid #fff;
+        border-bottom: 1px solid #fff;
         place-items: center;
-        justify-content: center;
+        padding-inline: 3%;
     }
-      
-    .sub-nav {
-        display: flex;
-        border: 1px solid #fff;
-        width: 100%;
-        height: 40px;
-        place-items: center;
-        justify-content: center;
+
+    nav > img {
+        margin-right: 4%;
+        margin-left: 2%;
     }
       
     h1 {
-        font-size: 30px;
+        font-size: 24px;
         color: #fff;
-        font-family: 'Consolas';
     }
       
     h2 {
         font-size: 18px;
         color: #fff;
-        font-family: 'Consolas';
     }
       
     h3 {
         font-size: 12px;
         color: #fff;
-        font-family: 'Consolas';
     }
       
     section {
+        font-family: 'Consolas';
         width: 100%;
         height: 680px;
         color: white;
-        font-family: 'Consolas';
         padding: 30px;
+        
+    }
+
+    p {
+        margin-top: 3%;
+        margin-bottom: 5%;
+    }
+
+    .work-card {
+        margin-top: 4%;
+        border: 1px solid white;
+        width: 100%;
+        max-width: 400px;
+        height: 120px;
+        margin-bottom: 5%;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .work-card div {
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        padding-block: 10px;
+        padding-inline: 8px;
+        background: rgba(0, 0, 0, 0.7);
+    }
+
+    .work-card h1 {
+        font-weight: bolder;
+    }
+
+    .work-card h4 {
+        margin-top: 1%;
+        font-size: 11px;
+    }
+
+    #cityjs {
+        background-image: url('../assets/city-js.jpg');
     }
 }
