--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -46,11 +46,18 @@
         margin-bottom: 5%;
     }
 
+    .work-grid {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
     .work-card {
         margin-top: 4%;
         border: 1px solid white;
         width: 100%;
-        max-width: 400px;
+        max-width: 300px;
         height: 120px;
         margin-bottom: 5%;
         background-size: cover;
@@ -73,9 +80,5 @@
     .work-card h4 {
         margin-top: 1%;
         font-size: 11px;
-    }
-
-    #cityjs {
-        background-image: url('../assets/city-js.jpg');
     }
 }
