--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -111,17 +111,31 @@
     }
 
     .post-index {
-        font-size: 18px;
-        height: 60px;
         border-bottom: 1px solid white;
+    }
+
+    .post-index > h3 {
+        font-size: 18px;
+        height: 50px;
+    }
+
+    .post-index > small {
+        height: 14px;
+        font-size: 12px;
+        color: #b4b2b2;
     }
 }
 
 @media (max-width: 669px) {
-    .post-index {
+    .post-index > h3 {
         font-size: 14px;
-        height: 70px;
-        border-bottom: 1px solid white;
+        height: 60px;
+    }
+
+    .post-index > small {
+        height: 12px;
+        font-size: 12px;
+        color: #b4b2b2;
     }
 }
 
