--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -7,23 +7,71 @@
         display: flex;
         width: 100%;
         height: 80px;
-        border-bottom: 1px solid #fff;
+        border-bottom: 1px solid rgb(230, 230, 230);;
         place-items: center;
         padding-inline: 3%;
     }
 
+    nav > img {
+        margin-right: 2%;
+        margin-left: 2%;
+    }
+
+    #links {
+        transition: 0.3s;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        height: 50px;
+        border-bottom: 1px solid rgb(230, 230, 230);;
+        padding-inline: 3%;
+        place-items: center;
+    }
+
+    #links > a {
+        margin-left: 1%;
+        height: 100%;
+        padding-inline: 1%;
+        display: flex;
+        place-items: center;
+    }
+
+    #links > a:hover {
+        background-color: rgb(102, 102, 102);
+    }
+
     h1 {
         font-size: 30px;
-        color: #fff;
+        color: rgb(230, 230, 230);;
     }
       
     h2 {
         font-size: 18px;
-        color: #fff;
+        color: rgb(230, 230, 230);;
     }
       
     h3 {
         font-size: 12px;
-        color: #fff;
+        color: rgb(230, 230, 230);;
+    }
+
+    section {
+        margin-left: 20px;
+        margin-top: 5px;
+        font-family: 'Consolas';
+        width: 42%;
+        min-width: 525px;
+        height: 680px;
+        color: rgb(230, 230, 230);;
+        padding: 30px;
+    }
+
+    section > h1 {
+        margin-top: 1%;
+        margin-bottom: 2%;
+    }
+
+    section > p {
+        margin-bottom: 2%;
     }
 }
