--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -7,7 +7,7 @@
         display: flex;
         width: 100%;
         height: 80px;
-        border-bottom: 1px solid #fff;
+        border-bottom: 1px solid rgb(230, 230, 230);;
         place-items: center;
         padding-inline: 3%;
     }
@@ -21,7 +21,7 @@
         display: flex;
         flex-direction: row;
         height: 50px;
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid rgb(230, 230, 230);;
         padding-inline: 3%;
         place-items: center;
     }
@@ -33,13 +33,13 @@
       
     h1 {
         font-size: 24px;
-        color: #fff;
+        color: rgb(230, 230, 230);;
     }
       
     h2 {
         font-size: 18px;
-        color: #fff;
-        border-bottom: 1px solid white;
+        color: rgb(230, 230, 230);;
+        border-bottom: 1px solid rgb(230, 230, 230);;
         width: 80%;
         max-width: 260px;
         line-height: 30px;
@@ -47,16 +47,15 @@
       
     h3 {
         font-size: 12px;
-        color: #fff;
+        color: rgb(230, 230, 230);;
     }
       
     section {
         font-family: 'Consolas';
         width: 100%;
         height: 680px;
-        color: white;
+        color: rgb(230, 230, 230);;
         padding: 30px;
-        
     }
 
     p {
@@ -78,7 +77,7 @@
 
     .work-card {
         margin-top: 4%;
-        border: 1px solid white;
+        border: 1px solid rgb(230, 230, 230);;
         width: 100%;
         max-width: 300px;
         height: 120px;
@@ -111,7 +110,7 @@
     }
 
     .post-index {
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid rgb(230, 230, 230);;
     }
 
     .post-index > h3 {
