--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -3,6 +3,12 @@
         line-height: 19px;
     }
 
+    main {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
     nav {
         display: flex;
         width: 100%;
@@ -71,7 +77,87 @@
         margin-bottom: 2%;
     }
 
+    .work-title {
+        margin-top: 6%;
+    }
+
     section > p {
         margin-bottom: 2%;
+    }
+
+    .work-grid {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .work-grid h2 {
+        border: none;
+        line-height: 18px;
+    }
+
+    .work-card {
+        margin-top: 4%;
+        border: 1px solid rgb(230, 230, 230);;
+        width: 100%;
+        max-width: 350px;
+        height: 120px;
+        margin-bottom: 5%;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .work-card div {
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        padding-block: 10px;
+        padding-inline: 8px;
+        background: rgba(0, 0, 0, 0.7);
+    }
+
+    .work-card h1 {
+        font-weight: bolder;
+    }
+
+    .work-card h4 {
+        margin-top: 1%;
+        font-size: 11px;
+    }
+
+    .contact-grid {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 3%;
+    }
+
+    .contact-card {
+        display: flex;
+        font-size: 12px;
+        text-align: center;
+        font-family: 'JetBrains Mono';
+        margin-top: 4%;
+        border: 1px solid rgb(230, 230, 230);;
+        width: 120px;
+        height: 120px;
+        margin-bottom: 5%;
+        background-size: cover;
+        background-position: center;
+        place-items: center;
+        justify-content: center;
+    }
+
+    .contact-card > div {
+        padding: 1%;
+    }
+
+    #linkedin {
+        background: linear-gradient(45deg, #27325a, #43528a);
+    }
+
+    #twitter {
+        background: linear-gradient(45deg, #3d414d, #71778f);
     }
 }
