--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -7,13 +7,15 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+        height: 1250px;
+        overflow-y: auto;
     }
 
     nav {
         display: flex;
         width: 100%;
         height: 80px;
-        border-bottom: 1px solid rgb(230, 230, 230);;
+        border-bottom: 1px solid rgb(230, 230, 230);
         place-items: center;
         padding-inline: 3%;
     }
@@ -29,7 +31,7 @@
         display: flex;
         flex-direction: row;
         height: 50px;
-        border-bottom: 1px solid rgb(230, 230, 230);;
+        border-bottom: 1px solid rgb(230, 230, 230);
         padding-inline: 3%;
         place-items: center;
     }
@@ -159,5 +161,16 @@
 
     #twitter {
         background: linear-gradient(45deg, #3d414d, #71778f);
+    }
+
+    footer {
+        color: rgb(230, 230, 230);
+        width: 100%;
+        height: 120px;
+        display: flex;
+        place-items: center;
+        justify-content: center;
+        font-family: 'JetBrains Mono';
+        background-color: rgb(19, 19, 19);
     }
 }
