--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -3,6 +3,11 @@
         line-height: 20px;
     }
 
+    main {
+        height: 1250px;
+        overflow-y: auto;
+    }
+
     nav {
         display: flex;
         width: 100%;
