--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -128,6 +128,53 @@
         font-size: 12px;
         color: #b4b2b2;
     }
+
+    .contact-grid {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 3%;
+    }
+
+    .contact-card {
+        display: flex;
+        font-size: 12px;
+        text-align: center;
+        font-family: 'JetBrains Mono';
+        margin-top: 4%;
+        border: 1px solid rgb(230, 230, 230);;
+        width: 120px;
+        height: 120px;
+        margin-bottom: 5%;
+        background-size: cover;
+        background-position: center;
+        place-items: center;
+        justify-content: center;
+    }
+
+    .contact-card > div {
+        padding: 1%;
+    }
+
+    #linkedin {
+        background: linear-gradient(45deg, #27325a, #43528a);
+    }
+
+    #twitter {
+        background: linear-gradient(45deg, #3d414d, #71778f);
+    }
+
+    footer {
+        margin-top: 4%;
+        color: rgb(230, 230, 230);
+        width: 100%;
+        height: 75px;
+        display: flex;
+        place-items: center;
+        justify-content: center;
+        font-family: 'JetBrains Mono';
+        background-color: rgb(19, 19, 19);
+    }
 }
 
 @media (max-width: 669px) {
