--- a/css/global.css
+++ b/css/global.css
@@ -2,11 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'Consolas', monospace;
 }
 
 #links, nav {
-  font-family: 'JetBrains Mono', monospace;
   display: flex;
   justify-content: center;
 }
