--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: GeistBold;
-    src: url("../Geist-Bold.otf") format("opentype");
+    src: url("../fonts/Geist-Bold.otf") format("opentype");
 }
 
 @font-face {
     font-family: Geist;
-    src: url("../Geist-Regular.otf") format("opentype");
+    src: url("../fonts/Geist-Regular.otf") format("opentype");
 }
