--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,7 @@ body {
 }
 
 code {
+    margin-block: 10px;
     height: 100%;
     background-color: #2b2b2b !important;
     color: white !important;
