size medium on normal font

--- a/styles/global.css
+++ b/styles/global.css
@@ -55,6 +55,10 @@ h3 {
     font-size: large;
 }
 
+section > p {
+    font-size: medium;
+}
+
 li {
     font-size: medium;
     margin-left: 20px;
