--- a/styles/global.css
+++ b/styles/global.css
@@ -21,8 +21,7 @@ code {
     font-family: 'JetBrainsMono';
     font-size: medium;
     padding: 0px !important;
-    padding-inline: 20px !important;
-    padding-bottom: 20px !important;
+    padding: 20px !important;
     border-radius: 10px;
     border: 1px solid black;
 }
