--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,3 +9,13 @@
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(223, 50, 58, 0.3);
 }
+
+.main-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  display: none;
+}
